@@ -13,7 +13,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/messages/move-first")
@@ -87,7 +86,7 @@ public class MoveFirstMessageController {
                     .stream()
                     .map(Binding::getRoutingKey)
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
     }
 
 
